<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">JadwalKRL</string>

    <string name="action_settings">Settings</string>
    <string name="action_swap_station">Swap Station</string>
    <string name="action_search">Search Schedule</string>
    <string name="action_switch_search">Switch Search</string>
    <string name="action_switch_quick_search">Quick Search</string>
    <string name="action_switch_advanced_search">Advanced Search</string>
    <string name="action_notification">Notify Me</string>
    <string name="action_map">Train Map</string>
    <string name="action_share">Share</string>

    <string name="content_station">Station</string>
    <string name="content_route">Route</string>
    <string name="content_time_range">Time Range</string>
    <string name="label_to">to</string>

    <string name="title_activity_selector">Select Station</string>
    <string name="title_activity_schedule">Schedule</string>
    <string name="title_activity_route_detail">Schedule Details</string>
    <string name="title_activity_route_map">Route Map</string>

    <string name="key_depart_from">Depart From</string>
    <string name="key_depart_for">Depart For</string>
    <string name="key_next_station">Next Station</string>
    <string name="key_route">Route</string>
    <string name="key_depart_time">Depart Time</string>
    <string name="key_train_no">Train No.</string>
    \
    <string name="pref_search_setting_key">search_setting</string>
    <string name="pref_search_setting_default">BOO-5-7</string>
    <string name="pref_station_default">BOO</string>

    // Notification Preferences
    <string name="pref_last_notification">last_notification</string>

    <string name="pref_notification_time_label">Notification</string>
    <string name="pref_notification_time_key">notify_time</string>

    <string name="pref_minutes_10">10</string>
    <string name="pref_minutes_30">30</string>
    <string name="pref_minutes_60">60</string>

    <string name="pref_minutes_10_label">10 Minutes before</string>
    <string name="pref_minutes_30_label">30 Minutes before</string>
    <string name="pref_minutes_60_label">1 Hour before</string>

    <string name="format_notification_title">Train will depart in <xliff:g id="depart_time">%s</xliff:g></string>
    <string name="format_notification">Train No. <xliff:g id="unit_no">%s</xliff:g> from <xliff:g id="depart_from_station">%s</xliff:g> heading to <xliff:g id="depart_for_station">%s</xliff:g> will depart at <xliff:g id="depart_time">%s</xliff:g></string>

    <string name="format_share_text">[<xliff:g id="depart_time">%s</xliff:g>] <xliff:g id="depart_from_station">%s</xliff:g> to <xliff:g id="depart_for_station">%s</xliff:g></string>
    <string name="message_notification_set">Notification has been set</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="hello_world">Hello world!</string>
</resources>
