<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/quick_search_layout"
        style="@style/AppTheme.Header.Search"
        android:orientation="horizontal"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:visibility="gone">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/content_station"
            android:src="@drawable/ic_station" />

        <Button
            android:id="@+id/station_button"
            style="@style/AppTheme.Button.Station"
            android:layout_width="0dp"
            android:layout_marginLeft="@dimen/keyline_2"
            android:layout_marginRight="@dimen/keyline_1"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/advanced_search_button"
            style="@style/AppTheme.Button.SearchSwitcher"
            android:contentDescription="@string/action_switch_advanced_search"
            android:src="@drawable/ic_advanced_search" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/advanced_search_layout"
        style="@style/AppTheme.Header.Search"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/content_route"
                android:src="@drawable/ic_route" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/depart_from_station_button"
                    style="@style/AppTheme.Button.Station"
                    android:layout_width="match_parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white_alpha_50" />

                <Button
                    android:id="@+id/depart_for_station_button"
                    style="@style/AppTheme.Button.Station"
                    android:layout_width="match_parent" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/swap_station_button"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_primary_button"
                android:contentDescription="@string/action_swap_station"
                android:src="@drawable/ic_swap" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/content_time_range"
                    android:src="@drawable/ic_time_range" />

                <EditText
                    android:id="@+id/time_bottom_limit_input"
                    style="@style/AppTheme.Input.Time"
                    android:layout_marginLeft="28dp" />

                <TextView
                    style="@style/AppTheme.Text.Dark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="16dp"
                    android:text="@string/label_to" />

                <EditText
                    android:id="@+id/time_top_limit_input"
                    style="@style/AppTheme.Input.Time"
                    android:layout_marginLeft="16dp" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/quick_search_button"
                style="@style/AppTheme.Button.SearchSwitcher"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/action_switch_quick_search"
                android:src="@drawable/ic_quick_search" />
        </RelativeLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/search_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="right|bottom"
        android:layout_marginRight="16dp"
        android:background="@drawable/bg_accent_button"
        android:contentDescription="@string/action_search"
        android:src="@drawable/ic_search" />

</FrameLayout>
