<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/AppTheme.Detail.Key"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/key_depart_from" />

                <TextView
                    android:id="@+id/depart_from_station_text"
                    style="@style/AppTheme.Detail.Value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/tiny" />

                <TextView
                    style="@style/AppTheme.Detail.Key"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/keyline_1"
                    android:text="@string/key_depart_for" />

                <TextView
                    android:id="@+id/depart_for_station_text"
                    style="@style/AppTheme.Detail.Value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/tiny" />

                <TextView
                    style="@style/AppTheme.Detail.Key"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/keyline_1"
                    android:text="@string/key_next_station" />

                <TextView
                    android:id="@+id/next_station_text"
                    style="@style/AppTheme.Detail.Value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/tiny" />

                <TextView
                    style="@style/AppTheme.Detail.Key"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/keyline_1"
                    android:text="@string/key_route" />

                <TextView
                    android:id="@+id/route_text"
                    style="@style/AppTheme.Detail.Value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/tiny" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/keyline_1"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/AppTheme.Detail.Key"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/key_depart_time" />

                <TextView
                    android:id="@+id/depart_time_text"
                    style="@style/AppTheme.Detail.Time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/tiny" />

                <TextView
                    style="@style/AppTheme.Detail.Key"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/keyline_1"
                    android:text="@string/key_train_no" />

                <TextView
                    android:id="@+id/train_no_text"
                    style="@style/AppTheme.Detail.TrainNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/tiny" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/notification_button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="right|bottom"
        android:background="@drawable/bg_accent_button"
        android:contentDescription="@string/action_notification"
        android:src="@drawable/ic_notification" />
</FrameLayout>